--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.2
-  provider: ^6.1.1  # Adicione esta linha
+  provider: ^6.1.1  
 
 dev_dependencies:
   flutter_test:
